# advent-of-code

./: .gitignore  .gitmessage  Justfile  README.md  init.sh
1_sonar_sweeper/: README.md  (+1 more)
2022/rust/advent_of_code/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day1/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day1/src/: main.rs
2022/rust/advent_of_code/src/day10/: README.md
2022/rust/advent_of_code/src/day11/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day12/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day2/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day3/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day4/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day5/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day6/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day7/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day8/: Cargo.toml  README.md
2022/rust/advent_of_code/src/day9/: Cargo.toml  README.md
2024/python/: .envrc  Justfile  README.md  flake.nix  pyproject.toml
2024/python/src/advent_of_code/: __init__.py  main.py
2024/python/src/advent_of_code/day01/: README.md  __init__.py  day01.py
2024/python/src/advent_of_code/day02/: README.md  __init__.py  day02.py
2024/python/src/advent_of_code/day03/: README.md  __init__.py  day03.py
2024/python/src/advent_of_code/day04/: README.md  __init__.py  day04.py
2024/python/src/advent_of_code/day05/: README.md  __init__.py  day05.py
2024/python/src/advent_of_code/day06/: README.md  __init__.py  day06.py
2024/python/src/advent_of_code/day07/: README.md  __init__.py  day07.py
2024/python/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py
4_giant_squid/: CMakeLists.txt  main_test.cpp
(+56 files in other folders)
