[workspace]
members = [
    "src/day1",
    "src/day2",
    "src/day3",
    "src/day4",
    "src/day5",
    "src/day6",
    "src/day7",
    "src/day8",
    "src/day9",
    "src/day10",
    "src/day11",
    "src/day12"
]
default-members = ["src/day11"]

[workspace.package]
version = "0.1.0"
authors = ["ChromaMaster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
